--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>SHE Wings</title>
+    <title>SHE W</title>
 
     <!-- Meta -->
     <meta charset="utf-8" />
